@@ -6,8 +6,6 @@ import com.kynsof.identity.domain.dto.ModuleDto;
 import com.kynsof.identity.domain.dto.PermissionDto;
 import com.kynsof.identity.domain.interfaces.service.IBusinessModuleService;
 import com.kynsof.identity.infrastructure.identity.BusinessModule;
-import com.kynsof.identity.infrastructure.identity.ModuleSystem;
-import com.kynsof.identity.infrastructure.identity.Permission;
 import com.kynsof.identity.infrastructure.repository.command.BusinessModuleWriteDataJPARepository;
 import com.kynsof.identity.infrastructure.repository.query.BusinessModuleReadDataJPARepository;
 import com.kynsof.share.core.domain.exception.BusinessNotFoundException;
@@ -17,135 +15,116 @@ import com.kynsof.share.core.domain.request.FilterCriteria;
 import com.kynsof.share.core.domain.response.ErrorField;
 import com.kynsof.share.core.domain.response.PaginatedResponse;
 import com.kynsof.share.core.infrastructure.specifications.GenericSpecificationsBuilder;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.UUID;
 
 @Service
 public class BusinessModuleServiceImpl implements IBusinessModuleService {
 
-    @Autowired
-    private BusinessModuleWriteDataJPARepository commandRepository;
+    private final BusinessModuleWriteDataJPARepository commandRepository;
+    private final BusinessModuleReadDataJPARepository queryRepository;
 
-    @Autowired
-    private BusinessModuleReadDataJPARepository queryRepository;
+    public BusinessModuleServiceImpl(BusinessModuleWriteDataJPARepository commandRepository,
+                                     BusinessModuleReadDataJPARepository queryRepository) {
+        this.commandRepository = commandRepository;
+        this.queryRepository = queryRepository;
+    }
 
     @Override
     public List<BusinessModuleDto> findBusinessModuleByBusinessId(UUID businessId) {
-        List<BusinessModule> businessModules = queryRepository.findByBusinessId(businessId);
-        List<BusinessModuleDto> businessModulesDtos = new ArrayList<>();
-        
-        for (BusinessModule businessModule : businessModules) {
-            businessModulesDtos.add(new BusinessModuleDto(
-                    businessModule.getId(), 
-                    businessModule.getBusiness().toAggregate(), 
-                    businessModule.getModule().toAggregate())
-            );
-        }
-        return businessModulesDtos;
+        return queryRepository.findByBusinessId(businessId).stream()
+                .map(businessModule -> new BusinessModuleDto(
+                        businessModule.getId(),
+                        businessModule.getBusiness().toAggregate(),
+                        businessModule.getModule().toAggregate()))
+                .toList();
     }
 
     @Override
     public List<ModuleDto> findModulesByBusinessId(UUID businessId) {
-        List<BusinessModule> businessModules = queryRepository.findByBusinessId(businessId);
+        return queryRepository.findByBusinessId(businessId).stream()
+                .map(businessModule -> {
+                    var module = businessModule.getModule();
+                    var permissionsDto = module.getPermissions().stream()
+                            .map(permission -> new PermissionDto(
+                                    permission.getId(),
+                                    permission.getCode(),
+                                    permission.getDescription(),
+                                    null,
+                                    permission.getStatus(),
+                                    permission.getAction(),
+                                    permission.getCreatedAt()))
+                            .toList();
 
-        return businessModules.stream().map(businessModule -> {
-            ModuleSystem module = businessModule.getModule();
-            List<PermissionDto> permissionsDto = new ArrayList<>();
-            Set<Permission> permissions = module.getPermissions();
-            permissions.forEach(permission -> permissionsDto.add(
-                    new PermissionDto(
-                            permission.getId(),
-                            permission.getCode(),
-                            permission.getDescription(),
-                            null,
-                            permission.getStatus(),
-                            permission.getAction(),
-                            permission.getCreatedAt()
-                    )
-            ));
-
-            return new ModuleDto(module.getId(), module.getName(), module.getImage(), module.getDescription(), permissionsDto);
-        }).collect(Collectors.toList());
+                    return new ModuleDto(module.getId(), module.getName(), module.getImage(),
+                            module.getDescription(), permissionsDto);
+                })
+                .toList();
     }
 
     @Override
     public void create(BusinessModuleDto object) {
-        this.commandRepository.save(new BusinessModule(object));
+        commandRepository.save(new BusinessModule(object));
     }
 
     @Override
     public void create(List<BusinessModuleDto> objects) {
-        List<BusinessModule> businessModules = new ArrayList<>();
-        for (BusinessModuleDto object : objects) {
-            businessModules.add(new BusinessModule(object));
-        }
-        this.commandRepository.saveAll(businessModules);
+        var businessModules = objects.stream()
+                .map(BusinessModule::new)
+                .toList();
+        commandRepository.saveAll(businessModules);
     }
 
     @Override
     public void update(List<BusinessModuleDto> objects) {
-        List<BusinessModule> businessModules = new ArrayList<>();
-        for (BusinessModuleDto object : objects) {
-            BusinessModule update = new BusinessModule(object);
-            businessModules.add(update);
-        }
-        this.commandRepository.saveAll(businessModules);
+        var businessModules = objects.stream()
+                .map(BusinessModule::new)
+                .toList();
+        commandRepository.saveAll(businessModules);
     }
 
     @Override
     public void delete(BusinessModuleDto object) {
-        BusinessModule delete = new BusinessModule(object);
-        delete.setDeleted(Boolean.TRUE);
-
-        this.commandRepository.save(delete);
+        commandRepository.save(new BusinessModule(object));
     }
 
     @Override
     public void delete(List<BusinessModuleDto> deletes) {
-        List<BusinessModule> deletesObject = new ArrayList<>();
-        for (BusinessModuleDto businessModule : deletes) {
-            BusinessModule d = new BusinessModule(businessModule);
-            d.setDeleted(Boolean.TRUE);
-            deletesObject.add(d);
-        }
-        this.commandRepository.saveAll(deletesObject);
+        var deletesObject = deletes.stream()
+                .map(BusinessModule::new)
+                .toList();
+        commandRepository.saveAll(deletesObject);
     }
 
     @Override
     public BusinessModuleDto findById(UUID id) {
-
-        Optional<BusinessModule> object = this.queryRepository.findById(id);
-        if (object.isPresent()) {
-            return object.get().toAggregate();
-        }
-
-        throw new BusinessNotFoundException(new GlobalBusinessException(DomainErrorMessage.BUSINESS_MODULE_NOT_FOUND, new ErrorField("id", "BusinessModule not found.")));
+        return queryRepository.findById(id)
+                .map(BusinessModule::toAggregate)
+                .orElseThrow(() -> new BusinessNotFoundException(new GlobalBusinessException(
+                        DomainErrorMessage.BUSINESS_MODULE_NOT_FOUND, new ErrorField("id", "BusinessModule not found."))));
     }
 
     @Override
     public PaginatedResponse search(Pageable pageable, List<FilterCriteria> filterCriteria) {
-        GenericSpecificationsBuilder<BusinessModule> specifications = new GenericSpecificationsBuilder<>(filterCriteria);
-        Page<BusinessModule> data = this.queryRepository.findAll(specifications, pageable);
+        var specifications = new GenericSpecificationsBuilder<BusinessModule>(filterCriteria);
+        Page<BusinessModule> data = queryRepository.findAll(specifications, pageable);
         return getPaginatedResponse(data);
     }
 
     private PaginatedResponse getPaginatedResponse(Page<BusinessModule> data) {
-        List<BusinessModuleResponse> patients = new ArrayList<>();
-        for (BusinessModule o : data.getContent()) {
-            patients.add(new BusinessModuleResponse(o.toAggregate()));
-        }
-        return new PaginatedResponse(patients, data.getTotalPages(), data.getNumberOfElements(),
+        var responses = data.getContent().stream()
+                .map(businessModule -> new BusinessModuleResponse(businessModule.toAggregate()))
+                .toList();
+        return new PaginatedResponse(responses, data.getTotalPages(), data.getNumberOfElements(),
                 data.getTotalElements(), data.getSize(), data.getNumber());
     }
 
     @Override
     public Long countByBussinessIdAndModuleId(UUID businessId, UUID moduleId) {
-        return this.queryRepository.countByBussinessIdAndModuleId(businessId, moduleId);
+        return queryRepository.countByBussinessIdAndModuleId(businessId, moduleId);
     }
-
 }
